--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,14 +5,25 @@
 </md-toolbar>
 
 <p>{{user | json }}</p>
-<form novalidate (ngSubmit)="onSubmit()">
+
+<form novalidate #loginForm="ngForm" (ngSubmit)="onSubmit()">
 	<md-dialog-content>
 	<p>
-		<md-input-container>
-			<input mdInput placeholder="User Name" name="username" [(ngModel)]="user.username" type="text" required>
+		<md-input-container dividerColor="{{ username.invalid && !username.pristine ? 'warn' : 'primary' }}">
+			<md-hint>
+				<span [hidden]="username.pristine">
+					<span [hidden]="!username.errors?.required">User Name is Required</span>
+				</span>
+			</md-hint>
+			<input mdInput placeholder="User Name" name="username" [(ngModel)]="user.username" type="text" #username="ngModel" required>
 		</md-input-container>
-		<md-input-container>
-			<input mdInput placeholder="Password" name="password" [(ngModel)]="user.password" type="password" required>
+		<md-input-container dividerColor="{{ password.invalid && !password.pristine ? 'warn' : 'primary' }}">
+			<md-hint>
+				<span [hidden]="password.pristine">
+					<span [hidden]="!password.errors?.required">Password is Required</span>
+				</span>
+			</md-hint>
+			<input mdInput placeholder="Password" name="password" [(ngModel)]="user.password" type="password" #password="ngModel" required>
 		</md-input-container>
 		<md-checkbox name="remember" [(ngModel)]="user.remember">
 			Remember Me
@@ -22,6 +33,6 @@
 	<md-dialog-actions>
 		<span class="flex-spacer"></span>
 		<button md-button md-dialog-close>Cancel</button>
-		<button type="submit" md-button class="background-primary text-floral-white">Login</button>
+		<button type="submit" md-button class="background-primary text-floral-white" [disabled]="loginForm.form.invalid" >Login</button>
 	</md-dialog-actions>
 </form>
