--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -40,17 +40,29 @@
         <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
         <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
           <p>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('firstName').hasError('required') && feedbackForm.get('firstName').touched) ? 'warn' : 'primary'}}">
               <input mdInput formControlName="firstName" placeholder="First Name" type="text" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('firstName').hasError('required') && feedbackForm.get('firstName').touched)">First Name is required</span>
+              </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('lastName').hasError('required') && feedbackForm.get('lastName').touched) ? 'warn' : 'primary'}}">
               <input mdInput formControlName="lastName" placeholder="Last Name" type="text" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('lastName').hasError('required') && feedbackForm.get('lastName').touched)">Last Name is required</span>
+              </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('telNum').hasError('required') && feedbackForm.get('telNum').touched) ? 'warn' : 'primary'}}">
               <input mdInput formControlName="telNum" placeholder="Telephone Number" type="tel" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('telNum').hasError('required') && feedbackForm.get('telNum').touched)">Telephone Number is required</span>
+              </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched) ? 'warn' : 'primary'}}">
               <input mdInput formControlName="email" placeholder="Email" type="text" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">Email is required</span>
+              </md-hint>
             </md-input-container>
           </p>
           <table class="form-size">
@@ -70,7 +82,7 @@
               <textarea mdInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
             </md-input-container>
           </p>
-          <button type="submit" md-button class="background-primary text-floral-white">Submit</button>
+          <button type="submit" md-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
         </form>
       </div>
 </div>
