--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -24,6 +24,11 @@
 		</md-card-actions>
 	</md-card>
   </div>
+  <div [hidden]="dish">
+    <md-spinner></md-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
+
   <div fxFlex="40">
 	<md-list *ngIf="dish">
 	  	<h3>Comments</h3>
@@ -35,5 +40,9 @@
 			</p>
 		</md-list-item>
   	</md-list>
+  </div>
+  <div [hidden]="dish">
+    <md-spinner></md-spinner>
+    <h4>Loading . . . Please Wait</h4>
   </div>
 </div>
