--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,8 +19,12 @@
 			</md-grid-tile> 	
 		</md-grid-list>
 	</div>
-	<div [hidden]="dishes">
+	<div [hidden]="dishes || errMsg">
 		<md-spinner></md-spinner>
 		<h4>Loading . . . Please Wait</h4>
+	</div>
+	<div *ngIf="errMsg">
+		<h2>Error</h2>
+		<h4>{{errMsg}}</h4>
 	</div>
 </div>
