--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
   	<md-card>
 		<md-card-header>
 			<md-card-title>
@@ -31,7 +31,7 @@
 		</md-card-actions>
 	</md-card>
   </div>
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
 	<md-list>
 	  	<h3>Comments</h3>
 		<md-list-item *ngFor="let feedback of dish.comments">
