--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -57,7 +57,7 @@
       <div fxFlex>
         <h2>Corporate Leadership</h2>
         <br/>
-        <md-list *ngIf="leaders">
+        <md-list *ngIf="leaders" [@expand]>
           <md-list-item *ngFor="let leader of leaders" class="content">
         		<div fxFlex="column" fxLayoutGap="20px">
         			<img class="mat-list-icon-update" src={{leader.image}} alt={{leader.name}}>
