--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
      fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px">
 
-  <md-card *ngIf="dish" fxFlex>
+  <md-card *ngIf="dish" fxFlex [@expand]>
     <md-card-header>
       <div md-card-avatar></div>
       <md-card-title>
@@ -26,7 +26,7 @@
     <h2>Error</h2>
     <h4>{{dishErrMsg}}</h4>
   </div>
-  <md-card *ngIf="promotion" fxFlex>
+  <md-card *ngIf="promotion" fxFlex [@expand]>
     <md-card-header>
       <div md-card-avatar></div>
       <md-card-title>
@@ -47,7 +47,7 @@
     <h2>Error</h2>
     <h4>{{promotionErrrMsg}}</h4>
   </div>
-  <md-card *ngIf="leader" fxFlex>
+  <md-card *ngIf="leader" fxFlex [@expand]>
     <md-card-header>
       <div md-card-avatar></div>
       <md-card-title>
