--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,87 +2,105 @@
      fxLayout="column"
      fxLayoutGap="10px">
 
-     <div fxFlex>
-            <div>
-               <h3>Contact Us</h3>
-               <hr>
-            </div>
-     </div>
+  <div fxFlex>
+    <div>
+      <h3>Contact Us</h3>
+      <hr>
+    </div>
+  </div>
 
-    <div fxFlex>
-      <h3>Location Information</h3> 
-      <div fxLayout="column" fxLayout.gt-sm="row">
-          <div fxFlex="50" fxFlexOffset="20px">
-                <h4>Our Address</h4>
-                <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>: 
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
-               <p></p>
-                <div>
-                    <a md-raised-button href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
-                    <a md-raised-button><i class="fa fa-skype"></i> Skype</a>
-                    <a md-raised-button href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
-                </div>
-            </div>
-          <div fxFlex="40">
-                <h4>Map of our Location</h4>
-          </div>
+  <div fxFlex>
+    <h3>Location Information</h3> 
+    <div fxLayout="column" fxLayout.gt-sm="row">
+      <div fxFlex="50" fxFlexOffset="20px">
+        <h4>Our Address</h4>
+        <address>
+          121, Clear Water Bay Road<br>
+          Clear Water Bay, Kowloon<br>
+          HONG KONG<br>
+          <i class="fa fa-phone"></i>: +852 1234 5678<br>
+          <i class="fa fa-fax"></i>: +852 8765 4321<br>
+          <i class="fa fa-envelope"></i>: 
+          <a href="mailto:confusion@food.net">confusion@food.net</a>
+        </address>
+        <p></p>
+        <div>
+          <a md-raised-button href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
+          <a md-raised-button><i class="fa fa-skype"></i> Skype</a>
+          <a md-raised-button href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
         </div>
       </div>
-      <div fxFlex fxFlexOffset="20px" class="form-size">
-        <h3>Send us your feedback</h3>
-        <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
-        <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
-          <p>
-            <md-input-container class="half-width" dividerColor="{{formErrors.firstName ? 'warn' : 'primary'}}">
-              <input mdInput formControlName="firstName" placeholder="First Name" type="text" required>
-              <md-hint>
-                <span [hidden]="!(formErrors.firstName)">{{formErrors.firstName}}</span>
-              </md-hint>
-            </md-input-container>
-            <md-input-container class="half-width" dividerColor="{{formErrors.lastName ? 'warn' : 'primary'}}">
-              <input mdInput formControlName="lastName" placeholder="Last Name" type="text" required>
-              <md-hint>
-                <span [hidden]="!(formErrors.lastName)">{{formErrors.lastName}}</span>
-              </md-hint>
-            </md-input-container>
-            <md-input-container class="half-width" dividerColor="{{formErrors.telNum ? 'warn' : 'primary'}}">
-              <input mdInput formControlName="telNum" placeholder="Telephone Number" type="tel" pattern="[0-9]*" required>
-              <md-hint>
-                <span [hidden]="!(formErrors.telNum)">{{formErrors.telNum}}</span>
-              </md-hint>
-            </md-input-container>
-            <md-input-container class="half-width" dividerColor="{{formErrors.email ? 'warn' : 'primary'}}">
-              <input mdInput formControlName="email" placeholder="Email" type="email" email required>
-              <md-hint>
-                <span [hidden]="!(formErrors.email)">{{formErrors.email}}</span>
-              </md-hint>
-            </md-input-container>
-          </p>
-          <table class="form-size">
-            <td>
-              <md-slide-toggle formControlName="agree">May we contact you?</md-slide-toggle>
-            </td>
-            <td>
-              <md-select placeholder="How?" formControlName="contactType">
-                <md-option *ngFor="let cType of contact" [value]="cType">
-                  {{ cType }}
-                </md-option>
-              </md-select>
-            </td>
-          </table>
-          <p>
-            <md-input-container class="full-width">
-              <textarea mdInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
-            </md-input-container>
-          </p>
-          <button type="submit" md-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
-        </form>
+      <div fxFlex="40">
+        <h4>Map of our Location</h4>
       </div>
+    </div>
+  </div>
+  <div fxFlex fxFlexOffset="20px" class="form-size" *ngIf="!isSubmitted && !feedbackCopy" [@expand]>
+    <h3>Send us your feedback</h3>
+    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+      <p>
+        <md-input-container class="half-width" dividerColor="{{formErrors.firstName ? 'warn' : 'primary'}}">
+          <input mdInput formControlName="firstName" placeholder="First Name" type="text" required>
+          <md-hint>
+            <span [hidden]="!(formErrors.firstName)">{{formErrors.firstName}}</span>
+          </md-hint>
+        </md-input-container>
+        <md-input-container class="half-width" dividerColor="{{formErrors.lastName ? 'warn' : 'primary'}}">
+          <input mdInput formControlName="lastName" placeholder="Last Name" type="text" required>
+          <md-hint>
+            <span [hidden]="!(formErrors.lastName)">{{formErrors.lastName}}</span>
+          </md-hint>
+        </md-input-container>
+        <md-input-container class="half-width" dividerColor="{{formErrors.telNum ? 'warn' : 'primary'}}">
+          <input mdInput formControlName="telNum" placeholder="Telephone Number" type="tel" pattern="[0-9]*" required>
+          <md-hint>
+            <span [hidden]="!(formErrors.telNum)">{{formErrors.telNum}}</span>
+          </md-hint>
+        </md-input-container>
+        <md-input-container class="half-width" dividerColor="{{formErrors.email ? 'warn' : 'primary'}}">
+          <input mdInput formControlName="email" placeholder="Email" type="email" email required>
+          <md-hint>
+            <span [hidden]="!(formErrors.email)">{{formErrors.email}}</span>
+          </md-hint>
+        </md-input-container>
+      </p>
+      <table class="form-size">
+        <td>
+          <md-slide-toggle formControlName="agree">May we contact you?</md-slide-toggle>
+        </td>
+        <td>
+          <md-select placeholder="How?" formControlName="contactType">
+            <md-option *ngFor="let cType of contact" [value]="cType">
+              {{ cType }}
+            </md-option>
+          </md-select>
+        </td>
+      </table>
+      <p>
+        <md-input-container class="full-width">
+          <textarea mdInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
+        </md-input-container>
+      </p>
+      <button type="submit" md-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
+    </form>
+  </div>
+  <div *ngIf="feedbackCopy" [@expand]>
+    <h4>Your Submission</h4>
+    <p>First Name: {{ feedback.firstName }}</p>
+    <p>Last Name: {{ feedback.lastName }}</p>
+    <p>Tel. Num: {{ feedback.telNum }}</p>
+    <p>Email: {{ feedback.email }}</p>
+    <p>Contact You?: {{ feedback.agree }}</p>
+    <p>How?: {{ feedback.contactType }}</p>  
+    <p>Feedback: {{ feedback.message }}</p>    
+  </div>
+  <div *ngIf="isSubmitted || errMsg">
+    <h4>Submitting Form</h4>
+    <md-spinner></md-spinner>
+  </div>
+  <div *ngIf="errMsg">
+    <h2>Error</h2>
+    <h4>{{errMsg}}</h4>
+  </div>
 </div>
